# READO

./: .gitignore  README.md  initialize.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml
optimizean/: config.py  contents.py  display.py  localization.py
poetry/: README.md  pyproject.toml  setup.py
poetry/src/: README.md  pyproject.toml
poetry/src/optimizean/: config.py  contents.py  dependency.py  installation.py  main.py  userid.py  utils.py
src/: initialize.sh
src/optimizean/: contents.py  display.py  main.py  userid.py  utils.py
src/tests/performance/: test_helper.py
src/tests/unit/: test_displaying_contents.py
tests/unit/: test_displaying.py  test_localization.py  test_performance.py
