[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"
include = ["pyproject.toml"]

[tool.poetry]
name = "optimizean"
version = "1.0.1"
description = "Have questions? Take a moment to find out!"
authors = [ "optimizean <optimize.an@gmail.com>",]
license = "MIT"
readme = ""

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.7.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poetry.scripts]
optimizean = "optimizean.main:main"

[custom.color]
main = "green3"
sub = "dark_slate_gray1"
emp = "magenta"